*gitlab-workhorse-2.1.1 (17 Jun 2017)

  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch>
  +gitlab-workhorse-2.1.1.ebuild:
  www-servers/gitlab-workhorse:  Add version 2.1.1

*gitlab-workhorse-1.2.1-r1 (29 Mar 2017)
*gitlab-workhorse-1.3.0-r1 (29 Mar 2017)
*gitlab-workhorse-1.4.1-r1 (29 Mar 2017)
*gitlab-workhorse-1.4.2 (29 Mar 2017)

  29 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-fix-Makefile.patch, +gitlab-workhorse-1.2.1-r1.ebuild,
  +gitlab-workhorse-1.3.0-r1.ebuild, +gitlab-workhorse-1.4.1-r1.ebuild,
  +gitlab-workhorse-1.4.2.ebuild, -files/fix-Makefile-1.2.1.patch,
  -files/fix-Makefile-1.3.0.patch, -files/fix-Makefile-1.4.1.patch,
  -gitlab-workhorse-1.2.1.ebuild, -gitlab-workhorse-1.3.0.ebuild,
  -gitlab-workhorse-1.4.1.ebuild:
  dev-vcs/gitlab-workhorse:  Added ebuild for gitlab-workhorse-1.4.2 and finally
  cleaned up the fix-makefile-patch mess.

*gitlab-workhorse-1.4.1 (13 Mar 2017)

  13 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/fix-Makefile-1.4.1.patch, +gitlab-workhorse-1.4.1.ebuild:
  dev-vcs/gitlab-workhorse:   added ebuild for gitlab-workhorse-1.4.1

  14 Feb 2017; Manuel Friedli <manuel@fritteli.ch>
  -files/fix-Makefile-1.1.1.patch, -gitlab-workhorse-1.1.1.ebuild:
  dev-vcs/gitlab-workhorse: added new ebuild, removed old one

*gitlab-workhorse-1.1.1 (12 Dec 2016)

  12 Dec 2016; Manuel Friedli <manuel@fritteli.ch>
  +files/fix-Makefile-1.1.1.patch, +gitlab-workhorse-1.1.1.ebuild,
  -files/fix-Makefile-1.1.0.patch, -gitlab-workhorse-1.1.0.ebuild:
  dev-vcs/gitlab-workhorse:  added ebuild for gitlab-workhorse-1.1.1, a
  dependency of gitlab-ce-8.14.4

*gitlab-workhorse-1.0.1 (05 Dec 2016)
*gitlab-workhorse-1.1.0 (05 Dec 2016)

  05 Dec 2016; Manuel Friedli <manuel@fritteli.ch>
  +files/fix-Makefile-1.0.1.patch, +files/fix-Makefile-1.1.0.patch,
  +gitlab-workhorse-1.0.1.ebuild, +gitlab-workhorse-1.1.0.ebuild:
  dev-vcs/gitlab-workhorse:  added ebuilds for versions 1.0.1 (dependency of