@@ -1,3 +1,7 @@
+  09 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
+  -gitlab-workhorse-1.2.1-r1.ebuild, -gitlab-workhorse-1.3.0-r1.ebuild:
+  www-servers/gitlab-workhorse:  Purge obsolete versions.
+
 *gitlab-workhorse-2.1.1 (17 Jun 2017)
 
   17 Jun 2017; Manuel Friedli <manuel@fritteli.ch>
